added axes and improved labeling

--- a/hackerboard.html
+++ b/hackerboard.html
@@ -18,6 +18,11 @@
 			#navigation {
 				display: none;
 			}
+			.axis path,	.axis line {
+				fill: none;
+				stroke: black;
+				shape-rendering: crispEdges;
+			}
 		</style>
 	</head>
 	<body>
