--- a/hackerboard.html
+++ b/hackerboard.html
@@ -6,6 +6,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 		<style>
 			html, body {
 				height: 100%;
@@ -72,4 +73,8 @@
 	<script src="github.js" type="text/javascript"></script>
 	<script src="output.js" type="text/javascript"></script>
 	<script src="map.js" type="text/javascript"></script>
+	<script src="database.js" type="text/javascript"></script>
+	<script type="text/javascript">
+
+	</script>
 </html>
