testing repo list sort

--- a/hackerboard.html
+++ b/hackerboard.html
@@ -74,6 +74,7 @@
 	<script src="output.js" type="text/javascript"></script>
 	<script src="map.js" type="text/javascript"></script>
 	<script src="database.js" type="text/javascript"></script>
+	<script src="dictionary.js" type="text/javascript"></script>
 	<script type="text/javascript">
 
 	</script>
